# rust-installer

./: .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs  combine-installers.sh  gen-install-script.sh  gen-installer.sh  install-template.sh  make-tarballs.sh  test.sh  triagebot.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  differential-shellcheck.yml
src/: combiner.rs  compression.rs  generator.rs  lib.rs  main.rs  main.yml  remove_dir_all.rs  scripter.rs  tarballer.rs  util.rs
test/rust-installer-v2/: .gitignore  .gitmodules  README.md  combine-installers.sh  gen-install-script.sh  install-template.sh  test.sh
test/rust-installer-v2/test/rust-installer-v1/: gen-installer.sh
