[package]
authors = ["The Rust Project Developers"]
name = "installer"
version = "0.0.0"

[[bin]]
doc = false
name = "rust-installer"
path = "src/main.rs"

[dependencies]
error-chain = "0.10.0"
flate2 = "0.2.19"
tar = "0.4.13"
walkdir = "1.0.7"
xz2 = "0.1.3"

[dependencies.clap]
features = ["yaml"]
version = "2.19.0"

[target."cfg(windows)".dependencies]
lazy_static = "0.2.8"
kernel32-sys = "0.2.2"
winapi = "0.2.8"
