[package]
authors = ["The Rust Project Developers"]
name = "installer"
version = "0.0.0"
edition = "2018"

[[bin]]
doc = false
name = "fabricate"
path = "src/main.rs"

[dependencies]
error-chain = "0.12.0"
flate2 = "1.0.1"
rayon = "1.0"
tar = "0.4.13"
walkdir = "2"
xz2 = "0.1.4"

[dependencies.clap]
features = ["yaml"]
version = "2.19.0"

[target."cfg(windows)".dependencies]
lazy_static = "1"
winapi = { version = "0.3", features = ["errhandlingapi", "handleapi", "ioapiset", "winerror", "winioctl", "winnt"] }
